tera/src/snapshot_tests/snapshots/tera__snapshot_tests__build_errors__build_errors@unknown_include.txt.snap
---
source: tera/src/snapshot_tests/build_errors.rs
expression: "&err"
input_file: tera/src/snapshot_tests/build_errors/unknown_include.txt
---
error: Unknown template `missing.html`
 --> main:1:12
  |
1 | {% include "missing.html" %}
  |            ^^^^^^^^^^^^^^
